# necora_auth

./: .env  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  routes.rs
src/conf/: config.rs
src/db/: database.rs
src/sec/: security.rs
src/serv/: server.rs
src/user/dom/: user.rs
