[package]
name = "necora_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
tower-http = { version = "0.5", features = ["auth"] }
thiserror = "2.0"
dotenvy = "0.15"