[package]
name = "necora_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
jsonwebtoken = "9.3.1"
thiserror = "2.0.12"
dotenvy = "0.15.7"
tower_governor = "0.7.0"
http = "1.1"
base64 = "0.22.1"