[package]
name = "necora_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
axum = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonwebtoken = "10.0.0"
thiserror = "2.0.17"
dotenvy = "0.15.7"
tower_governor = "0.8.0"
http = "1.3.1"
base64 = "0.22.1"
once_cell = "1.21.3"
tokio-postgres = "0.7.14"
deadpool-postgres = "0.14.1"